@@ -96,6 +96,20 @@
 			<artifactId>hutool-all</artifactId>
 			<version>${hutool.version}</version>
 		</dependency>
+		<!-- Jsoup -->
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.17.2</version> <!-- 或者您希望使用的最新稳定版本 -->
+		</dependency>
+
+		<!-- Json Path -->
+		<dependency>
+			<groupId>com.jayway.jsonpath</groupId>
+			<artifactId>json-path</artifactId>
+			<version>2.7.0</version> <!-- 或者您希望使用的最新稳定版本 -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -103,11 +117,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
-				<configuration>
-					<release>21</release>
-					<compilerArgs>--enable-preview</compilerArgs>
-				</configuration>
+<!--				<version>3.8.1</version>-->
+<!--				<configuration>-->
+<!--					<release>21</release>-->
+<!--					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
+<!--				</configuration>-->
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
